# ClientManagementSystem

./: README.md
ClientManagementSystem/: database.py  main.py  models.py  package-lock.json  pyproject.toml  utils.py
ClientManagementSystem/attached_assets/: 2025 Appointment Tracking Sheet - Sub-Account KPIs.csv
ClientManagementSystem/data/: agents.csv  appointments.csv  booking_issues.csv  clients.csv
ClientManagementSystem/pages/: 1_Client_Information.py  2_Agent_Information.py  3_Booking_Issues.py  4_Daily_Appointments.py  5_Appointment_Setters_Tracker.py  6_Sub_Account_KPIs.py
